# p2n2c-minimal-example

./: .gitignore  flake.nix  justfile  pyproject.toml  result
src/: app.py
