[tool.poetry]
name = "minimal_example"
version = "0.1.0"
description = ""
authors = ["John Smith <john.smith@example.com>"]
license = "Proprietary"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-semantic-conventions-ai = "^0.0.23"
opentelemetry-instrumentation-langchain = "^0.14.5"

[tool.poetry.scripts]
run = "src.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.12"
